Test additional OG tags

--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="https://images.ctfassets.net/8aevphvgewt8/4pe4eOtUJ0ARpZRE4fNekf/f52b1f9c52f059a33170229883731ed0/GH-Homepage-Universe-img.png"
-          property="og:image"/>
-    <meta content="GitHub" property="og:site_name"/>
-    <meta content="GitHub · Change is constant. GitHub keeps you ahead." property="og:title"/>
+    <meta property="og:title" content="Let&#39;s Actually">
+    <meta property="og:description" content="Coordinate plans without the group chat chaos">
+    <meta property="og:image" content="https://letsactually.com/og-preview.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:alt" content="Let&#39;s Actually - Make plans (not excuses)">
+    <meta property="og:url" content="https://letsactually.com/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Let&#39;s Actually">
+    <meta property="og:locale" content="en_US">
     <title>Node.js 24 Server</title>
     <style>
         body {
