Update og tags and logo

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta property="og:title" content="Let&#39;s Actually">
-    <meta property="og:description" content="Coordinate plans without the group chat chaos">
-    <meta property="og:image" content="https://letsactually.com/og-preview.png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:alt" content="Let&#39;s Actually - Make plans (not excuses)">
-    <meta property="og:url" content="https://letsactually.com/">
+    <meta property="og:title" content="Some Content">
+    <meta property="og:description" content="This is the coolest website on the Internet">
+    <meta property="og:image" content="/logo.webp">
+    <meta property="og:image:width" content="680">
+    <meta property="og:image:height" content="350">
+    <meta property="og:image:type" content="image/webp">
+    <meta property="og:image:alt" content="Web design is my passion">
+    <meta property="og:url" content="https://render-og-tag-test.onrender.com">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Let&#39;s Actually">
+    <meta property="og:site_name" content="Some Site">
     <meta property="og:locale" content="en_US">
     <title>Node.js 24 Server</title>
     <style>
