--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta property="og:title" content="Some Content">
     <meta property="og:description" content="This is the coolest website on the Internet">
-    <meta property="og:image" content="/logo.webp">
+    <meta property="og:image" content="/logo.png">
     <meta property="og:image:width" content="680">
     <meta property="og:image:height" content="350">
-    <meta property="og:image:type" content="image/webp">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:alt" content="Web design is my passion">
     <meta property="og:url" content="https://render-og-tag-test.onrender.com">
     <meta property="og:type" content="website">
